all industry suber sexy done generaing insights

--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "ml-regression": "^6.3.0",
     "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
