--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        submodules: false
         clean: false 
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
