--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,23 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: server/package-lock.json
+    - name: Write .env file from secrets
+      run: |
+        cat <<EOF > server/.env
+        PORT=${{ secrets.PORT }}
+        JWT_SECRET=${{ secrets.JWT_SECRET }}
+        JWT_KEY=${{ secrets.JWT_KEY }}
+        MONGODB_URI=${{ secrets.MONGODB_URI }}
+        AWS_REGION=${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
+        RAZORPAY_KEY_ID=${{ secrets.RAZORPAY_KEY_ID }}
+        RAZORPAY_KEY_SECRET=${{ secrets.RAZORPAY_KEY_SECRET }}
+        RAZORPAY_WEBHOOK_SECRET=${{ secrets.RAZORPAY_WEBHOOK_SECRET }}
+        RAZORPAY_WEBHOOK_URL=${{ secrets.RAZORPAY_WEBHOOK_URL }}
+        BUCKET_NAME=${{ secrets.BUCKET_NAME }}
+        EOF
     - name: Install dependencies
       run: npm ci
       working-directory: server  # 👈 run inside server/
