--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "regression": "^2.0.1",
