--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,9 +48,9 @@ jobs:
         RAZORPAY_WEBHOOK_URL=${{ secrets.RAZORPAY_WEBHOOK_URL }}
         BUCKET_NAME=${{ secrets.BUCKET_NAME }}
         EOF
-    - name: Install dependencies
-      run: npm ci
-      working-directory: server  # 👈 run inside server/
+    # - name: Install dependencies
+    #   run: npm ci
+    #   working-directory: server  # 👈 run inside server/
     - name: Restart PM2 process
       run: pm2 restart peekbi || pm2 start app.js --name="peekbi"
       working-directory: server
