--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "test": "nodemon app.js",
-    "build": "node app.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -23,6 +22,7 @@
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "danfojs-node": "^1.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
