--- a/client/peekfrontend/package.json
+++ b/client/peekfrontend/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.3"
   },
