--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.825.0",
     "@aws-sdk/s3-request-presigner": "^3.825.0",
+    "@google-cloud/tasks": "^5.8.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "config": "^3.3.12",
